Update cui-parent to 1.1.0 and Java baseline to 21
- Updated cui-parent to version 1.1.0 in pom.xml.
- Updated GitHub workflows (maven.yml and maven-release.yml) to use Java 21 as the baseline, removing Java 17 from the build matrix.
- Updated maven.yml to use -Dmaven.compiler.release for matrix builds.
- Updated .github/project.yml to current-version 1.4.0 and next-version 1.4-SNAPSHOT.