@@ -1,12 +1,12 @@
-/*
- * Copyright 2023 the original author or authors.
- * <p>
+/**
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -48,7 +48,7 @@ class MockResponseConfigResolverTest {
 
             // Assert
             assertEquals(1, elements.size(), "Should resolve one dispatcher element");
-            ModuleDispatcherElement element = elements.get(0);
+            ModuleDispatcherElement element = elements.getFirst();
             assertInstanceOf(MockResponseConfigDispatcherElement.class, element, "Element should be a MockResponseConfigDispatcherElement");
             assertEquals(DEFAULT_PATH, element.getBaseUrl(),
                     "Element should have correct path");
@@ -85,7 +85,7 @@ class MockResponseConfigResolverTest {
 
             // Assert
             assertEquals(1, elements.size(), "Should resolve one dispatcher element");
-            ModuleDispatcherElement element = elements.get(0);
+            ModuleDispatcherElement element = elements.getFirst();
             assertInstanceOf(MockResponseConfigDispatcherElement.class, element, "Element should be a MockResponseConfigDispatcherElement");
             assertEquals("/api/method", element.getBaseUrl(),
                     "Element should have correct path");
